fix_all_pipelien
